--- a/app/src/app.html
+++ b/app/src/app.html
@@ -2,15 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icon/apple-touch-icon.png?v=4">
-    <link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/icon/favicon-32x32.png?v=4">
-    <link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/icon/favicon-16x16.png?v=4">
-    <link rel="manifest" href="%sveltekit.assets%/icon/site.webmanifest?v=4">
-    <link rel="mask-icon" href="%sveltekit.assets%/icon/safari-pinned-tab.svg?v=4" color="#7c3e52">
-    <link rel="shortcut icon" href="%sveltekit.assets%/icon/favicon.ico?v=4">
-    <meta name="msapplication-TileColor" content="#7c3e52">
-    <meta name="msapplication-config" content="%sveltekit.assets%/icon/browserconfig.xml">
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icon/apple-touch-icon.png?v=10">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/icon/favicon-32x32.png?v=10">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/icon/favicon-16x16.png?v=10">
+		<link rel="mask-icon" href="%sveltekit.assets%/icon/safari-pinned-tab.svg?v=10" color="#7c3e52">
+		<link rel="shortcut icon" href="%sveltekit.assets%/icon/favicon.ico?v=10">
+		<meta name="msapplication-TileColor" content="#7c3e52">
+		<meta name="theme-color" content="#ffffff">
     <meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
