--- a/app/src/app.html
+++ b/app/src/app.html
@@ -2,11 +2,11 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/icon/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/icon/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/icon/favicon-16x16.png">
-		<link rel="mask-icon" href="%sveltekit.assets%/icon/safari-pinned-tab.svg" color="#7c3e52">
-		<link rel="shortcut icon" href="%sveltekit.assets%/icon/favicon.ico">
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="%sveltekit.assets%/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="%sveltekit.assets%/favicon-16x16.png">
+		<link rel="mask-icon" href="%sveltekit.assets%/safari-pinned-tab.svg" color="#7c3e52">
+		<link rel="shortcut icon" href="%sveltekit.assets%/favicon.ico">
 		<meta name="msapplication-TileColor" content="#7c3e52">
     <meta name="format-detection" content="telephone=no">
 		<meta name="viewport" content="width=device-width" />
